Fix timeout issues: optimize function performance and add timeout handling

--- a/netlify.toml
+++ b/netlify.toml
@@ -9,9 +9,14 @@
 
 [functions]
   directory = ".netlify/functions"
+  node_bundler = "esbuild"
 
-[functions."*"]
+[[functions]]
+  function = "analyze-conversation"
   timeout = 300
+
+[build.environment]
+  NODE_VERSION = "18"
 
 [[headers]]
   for = "/api/*"
