--- a/netlify.toml
+++ b/netlify.toml
@@ -10,6 +10,7 @@
 [functions]
   directory = ".netlify/functions"
   node_bundler = "esbuild"
+  timeout = 300
 
 [build.environment]
   NODE_VERSION = "18"
